--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf dist",
+    "start": "npm run clean && npx gulp start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
